--- a/project1.css
+++ b/project1.css
@@ -11,7 +11,7 @@
 	height:50px;
 	font-family:sanserif;
 	font-size:50px;
-	padding:20px;
+	padding:65px;
 	
 }
 
@@ -42,6 +42,8 @@ body{
 .image{
 	padding-top:50px;
 	padding-bottom:20px;
+	padding-right:45px;
+	padding-left:0px;
 	
 }
 .image2{
