--- a/project1.css
+++ b/project1.css
@@ -31,6 +31,7 @@ body{
 	padding-left:100px;
 	padding-right:100px;
 	font-size:25px;
+	width: 100%;
 }
 .subtopic{
 	background:#117864;
@@ -42,8 +43,8 @@ body{
 .image{
 	padding-top:50px;
 	padding-bottom:20px;
-	padding-right:45px;
-	padding-left:0px;
+	
+	
 	
 }
 .image2{
