--- a/project1.css
+++ b/project1.css
@@ -4,20 +4,31 @@
 	
 }
 
+
 .menu-bar{
 	background:#0B5345;
 	text-align:center;
 	color:white;
-	height:50px;
 	font-family:sanserif;
-	font-size:50px;
-	padding:65px;
+	font-size:40px;
+	padding:20px;
+	width: 100%;
+	height: auto;
 	
+}
+
+.image{
+	width: 100%;
+	height: auto;
+	text-align: center;
 }
 
 .para{
 	margin-top:15px;
 	font-size:25px;
+	width: 100%;
+	height: auto;
+	text-align: justify;
 }
 .p{
 	margin:15px;
@@ -26,12 +37,15 @@
 	margin-top:15px;
 	font-size:25px;
 	background:#F1C40F;
+	width: 100%;
+	height: auto;
+	text-align: justify;
+
 }
 body{
 	padding-left:100px;
 	padding-right:100px;
 	font-size:25px;
-	width:100%;
 }
 .subtopic{
 	background:#117864;
@@ -40,24 +54,19 @@ body{
 	margin-bottom:10px;
 	margin-top:40px;
 }
-.image{
-	padding-top:50px;
+
+
+.refe{
+	width: 100%;
+	height: auto;
+	padding-top:30px;
 	padding-bottom:20px;
-	
-	
-	
-}
-.image2{
-	padding-left:180px;
-}
-.colorimageref{
-	color:#2980B9;
-}
-.colorimageref2{
-	padding-top:5px;padding-bottom:20px;
 	color:#2980B9
 }
+
 .reference{
+	width: 100%;
+	height :auto;
 	padding-top:30px;
 	padding-bottom:20px;
 	color:#2980B9
@@ -68,3 +77,14 @@ body{
 	font-size:25px;
 	background:#F1C40F;
 }
+
+.colorimageref2{
+	padding-top:5px;
+	padding-bottom:20px;
+	color:#2980B9;
+	font-size;5px;
+	
+.colorimageref{
+	color:#2980B9;
+}
+	
